# ppp-plutusV3-plinth

./: README.md  blueprint.json  plutus-tx-template.cabal  ppp-plutusv3-plinth.cabal
app/: GenBlueprint.hs
off-chain/Week02/: gift.ts  redeemer42.ts
off-chain/Week03/: vesting-param.ts  vesting-param2.ts  vesting.ts
off-chain/Week05/: nft.ts  signed.ts
off-chain/lucid-evolution/Week02/: gift.ts  redeemer42.ts
off-chain/lucid-evolution/Week03/: vesting-param2.ts  vesting.ts
off-chain/lucid-evolution/Week05/: nft.ts  signed.ts
off-chain/meshjs/Week02/: gift-2.ts  gift.ts  redeemer42-ref-script.ts  redeemer42.ts
off-chain/meshjs/Week03/: vesting-param.ts  vesting-param2.ts  vesting-ref-script.ts  vesting.ts
off-chain/meshjs/Week05/: nft-image.ts  nft.ts  signed.ts
off-chain/meshjs/Week06/: negativeRTimed.ts
src/Week02/: Validators.hs
src/Week03/: ParameterizedVesting.hs  Vesting.hs  vesting-offchain.ts
src/Week05/: Minting.hs  NFT.hs
src/Week06/: ExploitableSwap.hs  NegativeRTimed.hs
src/Week08/: Staking.hs
src/Week09/: Oracle.hs  Stablecoin.hs
