cabal-version:   3.0
name:            plutus-tx-template
version:         0.1.0.0
license:
build-type:      Simple
extra-doc-files: README.md

common options
  ghc-options: -Wall
  default-language: Haskell2010

library scripts
  import:         options
  hs-source-dirs: src
  exposed-modules:
    Week02.Validators
    Week03.Vesting
    Week05.Minting
    Week06.NegativeRTimed
    Week06.ExploitableSwap
    Week08.Staking
    Week09.Oracle
    Week09.Stablecoin

  build-depends:
    , base
    , plutus-core        ^>=1.34
    , plutus-ledger-api  ^>=1.34
    , plutus-tx          ^>=1.34

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin

executable gen-blueprint
  import:           options
  hs-source-dirs:   app
  main-is:          GenBlueprint.hs
  build-depends:
    , base
    , bytestring
    , containers
    , plutus-core ^>=1.34.0.0
    , plutus-ledger-api ^>=1.34.0.0
    , plutus-tx ^>=1.34.0.0
    , plutus-tx-plugin ^>=1.34.0.0
    , scripts
